# CSFX-Core

./: .dockerignore  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  DEV_README.md  QUICKSTART_REGISTRY.md  README.md  REFACTORING_SUMMARY.md  docker-compose.dev.yml  docker-compose.failover-controller.yml  docker-compose.prod.yml  docker-compose.registry.yml  docker-compose.scheduler.yml  docker-compose.sdn-controller.yml  docker-compose.volume-manager.yml  docker-compose.yml  package.json  release-please-config.json  renovate.json
agent/: Cargo.toml  Dockerfile.dev  build.rs
agent/src/: client.rs  config.rs  docker.rs  main.rs  pki.rs  rbd.rs  ssh_keys.rs  system.rs  update_watch.rs
cli/: Cargo.toml  Dockerfile.dev
cli/src/: main.rs
control-plane/api-gateway/: Cargo.toml  Dockerfile  Dockerfile.dev  REGISTRY_INTEGRATION.md  build.rs
control-plane/api-gateway/src/: auth_service.rs  db.rs  docker_service.rs  init.rs  main.rs  metrics.rs  rbac_service.rs  self_monitor.rs  service_client.rs  service_client.rs.patch  system_collector.rs  telemetry.rs
control-plane/api-gateway/src/auth/: agent.rs  crypto.rs  middleware.rs  mod.rs  rbac.rs
control-plane/api-gateway/src/routes/: agents.rs  events.rs  frontend.rs  marketplace.rs  mod.rs  networks.rs  organizations.rs  registry.rs  resource_groups.rs  resources.rs  ssh_keys.rs  subscriptions.rs  system.rs  update.rs  updates.rs  users.rs  volumes.rs  workloads.rs
control-plane/api-gateway/src/utils/: router_ext.rs
control-plane/csf-updater/: Cargo.toml
control-plane/csf-updater/src/: config.rs  etcd.rs  main.rs  poller.rs  secret.rs  updater.rs  verify.rs
control-plane/csfx-migrate/: Cargo.toml
control-plane/csfx-migrate/src/: main.rs
control-plane/csfx-updater/: Cargo.toml
control-plane/csfx-updater/src/: config.rs  etcd.rs  git_mirror.rs  main.rs  nix_build.rs  poller.rs  updater.rs
control-plane/failover-controller/: Cargo.toml  Dockerfile.dev
control-plane/failover-controller/migration/: Cargo.toml
control-plane/failover-controller/migration/src/: lib.rs
control-plane/failover-controller/src/: main.rs  metrics.rs  server.rs
control-plane/failover-controller/src/db/: agents.rs  events.rs  mod.rs
control-plane/failover-controller/src/handlers/: events.rs
control-plane/failover-controller/src/models/: event.rs
control-plane/failover-controller/src/services/: failover.rs  mod.rs  monitor.rs
control-plane/registry/: .env.example  Cargo.toml  Dockerfile.dev  README.md  docker-compose.dev.yml  plan.md  test-registry.sh
control-plane/registry/migration/src/: m20251215_180000_add_rbac_tables.rs
control-plane/registry/src/: api_keys.rs  db.rs  logger.rs  main.rs  registry.rs  server.rs  tokens.rs
control-plane/registry/src/db/: agents.rs  api_keys.rs  bootstrap_tokens.rs  certificates.rs  mod.rs  tokens.rs
control-plane/registry/src/handlers/: admin.rs  agent.rs  mod.rs  pki.rs
control-plane/registry/src/models/: agent.rs  certificate.rs  mod.rs
control-plane/registry/src/services/: api_keys.rs  bootstrap_tokens.rs  mod.rs  pki.rs  registry.rs  tokens.rs
control-plane/scheduler/: Cargo.toml  Dockerfile.dev
control-plane/scheduler/entity/: Cargo.toml
control-plane/scheduler/entity/src/entities/: marketplace_templates.rs
control-plane/scheduler/src/: logger.rs  main.rs  server.rs
control-plane/scheduler/src/db/: agents.rs  mod.rs  workloads.rs
control-plane/scheduler/src/handlers/: internal.rs  mod.rs  workloads.rs
control-plane/scheduler/src/models/: workload.rs
control-plane/scheduler/src/services/: etcd.rs  mod.rs  scheduler.rs
control-plane/sdn-controller/: Cargo.toml  Dockerfile.dev
control-plane/sdn-controller/entity/src/entities/: docker_resources.rs
control-plane/sdn-controller/migration/src/: m20251216_190000_add_agents_and_metrics.rs  m20251228_120000_add_resource_groups.rs
control-plane/sdn-controller/src/: main.rs  models.rs  server.rs
control-plane/sdn-controller/src/db/: networks.rs
control-plane/sdn-controller/src/handlers/: networks.rs
control-plane/sdn-controller/src/services/: ipam.rs
control-plane/shared/entity/: Cargo.toml
control-plane/shared/entity/src/entities/: agent_api_keys.rs  agent_certificates.rs  agent_metrics.rs  agents.rs  bootstrap_tokens.rs  certificate_revocations.rs  failover_events.rs  mod.rs  network_members.rs  network_policies.rs  networks.rs  registry_tokens.rs  resource_groups.rs  user.rs  user_ssh_keys.rs  volume_snapshots.rs  volumes.rs  workloads.rs
control-plane/shared/shared/: Cargo.toml
control-plane/shared/shared/src/: db.rs  lib.rs  logger.rs
control-plane/volume-manager/: .env.example  .gitignore  CEPH_HA_README.md  CEPH_MODULE_STRUCTURE.md  Cargo.toml  Dockerfile.dev  Dockerfile.test  IMPLEMENTATION_SUMMARY.md  PATRONI_HA_ARCHITECTURE.md  QUICKSTART.md  build-and-start.sh  cleanup-etcd.sh  connect-postgres.sh  docker-compose.ceph.yml  docker-compose.dev.yml  docker-compose.patroni.yml  docker-compose.test.yml  haproxy-patroni.cfg  haproxy.cfg  init-ceph-config.sh  quickstart.sh  setup-ceph-ha.sh  setup-patroni-ha.sh  test-ha-failover.sh  test-ha.sh  test-hybrid-system.sh  test-patroni-ha.sh
control-plane/volume-manager/entity/src/entities/: mod.rs
control-plane/volume-manager/migration/src/: m20251228_140000_add_docker_resources.rs
control-plane/volume-manager/src/: logger.rs  main.rs  metrics.rs  server.rs
control-plane/volume-manager/src/ceph/: client.rs  init.rs  mod.rs  pool.rs  rbd.rs
control-plane/volume-manager/src/ceph/core/: client.rs  config.rs  error.rs  mod.rs
control-plane/volume-manager/src/ceph/ops/: init.rs  mod.rs
control-plane/volume-manager/src/ceph/storage/: mod.rs  pool.rs  rbd.rs  (+1 more)
control-plane/volume-manager/src/db/: volumes.rs
control-plane/volume-manager/src/etcd/: init.rs  mod.rs  state.rs
control-plane/volume-manager/src/handlers/: volumes.rs
control-plane/volume-manager/src/models/: volume.rs
control-plane/volume-manager/src/patroni/: client.rs  mod.rs  monitor.rs  types.rs
control-plane/volume-manager/src/services/: volume.rs
(+83 files in other folders)
