[package]
name = "csf-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "csf-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
sysinfo = { workspace = true }
rcgen = { workspace = true }
