[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "csf"
path = "src/main.rs"

[dependencies]
# Internal dependencies
shared = { path = "../control-plane/shared/shared" }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
dotenvy = { workspace = true }
anyhow = { workspace = true }
