[package]
name = "csf-updater"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "csf-updater"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
etcd-client = { workspace = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls-webpki-roots"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
tempfile = "3"
