[package]
name = "csfx-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "csfx-migrate"
path = "src/main.rs"

[dependencies]
migration = { path = "../shared/migration" }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
