[package]
name = "registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "registry"
path = "src/main.rs"

[dependencies]
# Internal dependencies
shared = { path = "../shared/shared" }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
dotenvy = { workspace = true }
anyhow = { workspace = true }
