[package]
name = "scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "scheduler"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared/shared" }
entity = { path = "../shared/entity" }

tokio = { workspace = true, features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
sea-orm = { workspace = true }
etcd-client = { workspace = true }
