[package]
name = "volume-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "volume-manager"
path = "src/main.rs"

[dependencies]
# Internal dependencies
shared = { path = "../shared/shared" }
entity = { path = "../shared/entity" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# etcd
etcd-client = { workspace = true }

# Web framework
axum = { version = "0.7", features = ["macros"] }

# Database
sea-orm = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP Client for Patroni
reqwest = { version = "0.11", features = ["json"] }

# Utilities
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
