[package]
name = "shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
migration = { path = "../migration" }

# Database
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
